--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.svg" alt="John Doe profile picture" />
+        <img
+          src="./assets/profile-pic.png"
+          alt="faisal profile picture"
+          style="width: 100%"
+          class="section__pic-container"
+        />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -46,12 +51,16 @@
         <p class="section__text__p2">Software Developer</p>
         <div class="btn-container">
           <button
-            class="btn btn-color-2"
+            class="myBtn btn btn-color-2"
+            target="_blank"
             onclick="window.open('./assets/faisalDevResume.pdf')"
           >
             Download CV
           </button>
-          <button class="myBtn btn btn-color-1" onclick="location.href='./#contact'">
+          <button
+            class="myBtn btn btn-color-2"
+            onclick="location.href='./#contact'"
+          >
             Contact Info
           </button>
         </div>
@@ -60,13 +69,13 @@
             src="./assets/linkedin.svg"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://www.linkedin.com/in/shaik-faisal-ahamed-1409a21a2/'"
+            onclick="openInNewTab('https://www.linkedin.com/in/shaik-faisal-ahamed-1409a21a2/')"
           />
           <img
             src="./assets/github.svg"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/faisaleric5530?tab=repositories'"
+            onclick="openInNewTab('https://github.com/faisaleric5530?tab=repositories')"
           />
         </div>
       </div>
@@ -77,7 +86,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/about-pic.svg"
+            src="./assets/about-pic.png"
             alt="Profile picture"
             class="about-pic"
           />
@@ -100,12 +109,22 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Tech Bachelors Degree<br />First Class with Distinction</p>
+              <p>
+                B.Tech Bachelors Degree<br /><i
+                  >(First Class with Distinction)</i
+                >
+              </p>
             </div>
           </div>
           <div class="text-container">
-            <p>
-              As a MERN Full Stack Developer, I am dedicated to crafting seamless web experiences that marry functionality with aesthetics. With expertise in MongoDB, Express.js, React, and Node.js, I thrive on architecting robust solutions that meet clients' unique needs. From database design to front-end development, I am committed to delivering high-quality, scalable applications. Let's collaborate to turn your visions into reality.
+            <p style="text-align: center">
+              As a <b>MERN</b> Full Stack Developer, I specialize in crafting
+              seamless web experiences that blend functionality with aesthetics.
+              With proficiency in MongoDB, Express.js, React, and Node.js, I
+              excel in designing robust solutions tailored to clients' needs.
+              From database design to front-end development, I deliver
+              high-quality, scalable applications. Let's collaborate to bring
+              your visions to life.
             </p>
           </div>
         </div>
@@ -194,7 +213,7 @@
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="experience-sub-title">Backend Development</h2>
             <div class="article-container">
               <article>
                 <img
@@ -205,7 +224,6 @@
                 <div>
                   <h3>Express JS</h3>
                   <p>Intermediate</p>
-                  
                 </div>
               </article>
               <article>
@@ -226,7 +244,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>MySQL</h3>
+                  <h3>PostgreSQL</h3>
                   <p>Basic</p>
                 </div>
               </article>
@@ -260,49 +278,53 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.svg"
+                src="./assets/project-1.png"
                 alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Real Time Video Chat App</h2>
+            <h2 class="experience-sub-title project-title">
+              Real Time Video Chat App
+            </h2>
             <div class="btn-container">
-              <button
+              <button class="btn btn-color-2 project-btn">Coming Soon</button>
+              <!-- <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
                 Github
-              </button>
-              <button
+              </button> -->
+              <!-- <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
                 Live Demo
-              </button>
+              </button> -->
             </div>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.svg"
+                src="./assets/project-2.png"
                 alt="Project 2"
                 class="project-img"
               />
             </div>
             <h2 class="experience-sub-title project-title">Social Media App</h2>
             <div class="btn-container">
-              <button
+              <button class="btn btn-color-2 project-btn">Coming Soon</button>
+              <!-- <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
                 Github
-              </button>
-              <button
+              </button> -->
+              <!-- <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
                 Live Demo
-              </button>
+              </button> -->
             </div>
           </div>
           <!-- <div class="details-container color-container">
@@ -347,21 +369,33 @@
             src="./assets/email.svg"
             alt="Email icon"
             class="icon contact-icon email-icon"
+            onclick="openInNewTab('mailto:faisalshaik.dev@gmail.com')"
           />
-          <p><a href="mailto:faisalshaik.dev@gmail.com">faisalshaik.dev@gmail.com</a></p>
+          <p>
+            <a href="mailto:faisalshaik.dev@gmail.com" target="_blank"
+              >faisalshaik.dev@gmail.com</a
+            >
+          </p>
         </div>
         <div class="contact-info-container">
           <img
             src="./assets/linkedin.svg"
             alt="LinkedIn icon"
             class="icon contact-icon"
+            onclick="openInNewTab('https://www.linkedin.com/in/shaik-faisal-ahamed-1409a21a2/')"
           />
-          <p><a href="https://www.linkedin.com/in/shaik-faisal-ahamed-1409a21a2/">LinkedIn</a></p>
+          <p>
+            <a
+              href="https://www.linkedin.com/in/shaik-faisal-ahamed-1409a21a2/"
+              target="_blank"
+              >LinkedIn</a
+            >
+          </p>
         </div>
       </div>
     </section>
     <footer>
-      <nav>
+      <!-- <nav>
         <div class="nav-links-container">
           <ul class="nav-links">
             <li><a href="#about">About</a></li>
@@ -370,7 +404,7 @@
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
-      </nav>
+      </nav> -->
       <p>Copyright &#169; 2023 Faisal Ahamed Shaik. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
