changed project cards

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./pCards.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
   <body>
@@ -273,7 +274,7 @@
     <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
-      <div class="experience-details-container">
+      <!-- <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container color-container">
             <div class="article-container">
@@ -288,18 +289,18 @@
             </h2>
             <div class="btn-container">
               <button class="btn btn-color-2 project-btn">Coming Soon</button>
-              <!-- <button
+              <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
                 Github
-              </button> -->
-              <!-- <button
+              </button>
+              <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
                 Live Demo
-              </button> -->
+              </button>
             </div>
           </div>
           <div class="details-container color-container">
@@ -313,21 +314,21 @@
             <h2 class="experience-sub-title project-title">Social Media App</h2>
             <div class="btn-container">
               <button class="btn btn-color-2 project-btn">Coming Soon</button>
-              <!-- <button
+              <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
                 Github
-              </button> -->
-              <!-- <button
+              </button>
+              <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
                 Live Demo
-              </button> -->
+              </button>
             </div>
           </div>
-          <!-- <div class="details-container color-container">
+          <div class="details-container color-container">
             <div class="article-container">
               <img
                 src="./assets/project-3.svg"
@@ -350,7 +351,76 @@
                 Live Demo
               </button>
             </div>
-          </div> -->
+          </div>
+        </div>
+      </div> -->
+      <div class="wrapper">
+        <div class="cols">
+          <div class="col" ontouchstart="this.classList.toggle('hover');">
+            <div class="container">
+              <div class="front" style="background-image: url(./assets/project-1.png)">
+                <div class="inner">
+                  <p style="color: beige;">Real Time Video Chat App</p>
+                  <span>Project 1</span>
+                </div>
+              </div>
+              <div class="back">
+                <div
+                  class="inner"
+                >
+                  <!-- <p>London is the capital city of the United Kingdom. It is the U.K.'s largest metropolis and its economic, transportation, and cultural centre.</p> -->
+                  <button class="btn btn-color-2 project-btn">Coming Soon</button>
+                  <!-- <button
+                    class="btn btn-color-2 project-btn"
+                    onclick="location.href='https://github.com/'"
+                  >
+                    Github
+                  </button>
+                  <button
+                    class="btn btn-color-2 project-btn"
+                    onclick="location.href='https://github.com/'"
+                  >
+                    Live Demo
+                  </button> -->
+                </div>
+              </div>
+            </div>
+          </div>
+  
+          <div class="col" ontouchstart="this.classList.toggle('hover');">
+            <div class="container">
+              <div class="front" style="background-image: url(./assets/project-2.png)">
+                <div class="inner">
+                  <p style="color: beige;">Social Media App</p>
+                  <span>Project 2</span>
+                </div>
+              </div>
+              <div class="back">
+                <div
+                  class="inner"
+                >
+                  <!-- <p>
+                    The city is a major centre for finance, commerce, and
+                    entertainment in India and is home to the Bombay Stock
+                    Exchange.
+                  </p> -->
+                  <button class="btn btn-color-2 project-btn">Coming Soon</button>
+                  <!-- <button
+                    class="btn btn-color-2 project-btn"
+                    onclick="location.href='https://github.com/'"
+                  >
+                    Github
+                  </button>
+                  <button
+                    class="btn btn-color-2 project-btn"
+                    onclick="location.href='https://github.com/'"
+                  >
+                    Live Demo
+                  </button> -->
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <img
