--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav id="desktop-nav">
       <div class="logo">Faisal Ahamed Shaik</div>
       <div>
-        <ul class="nav-links">
+        <ul class="nav-links" style="font-size: 16px;">
           <li><a href="#about">About</a></li>
           <li><a href="#experience">Experience</a></li>
           <li><a href="#projects">Projects</a></li>
@@ -360,7 +360,7 @@
             <div class="container">
               <div class="front" style="background-image: url(./assets/project-1.png)">
                 <div class="inner">
-                  <p style="color: beige;">Real Time Video Chat App</p>
+                  <p style="color: white;">Real Time Video Chat App</p>
                   <span>Project 1</span>
                 </div>
               </div>
@@ -369,7 +369,7 @@
                   class="inner"
                 >
                   <!-- <p>London is the capital city of the United Kingdom. It is the U.K.'s largest metropolis and its economic, transportation, and cultural centre.</p> -->
-                  <button class="btn btn-color-2 project-btn">Coming Soon</button>
+                  <button class="myBtn btn btn-color-2 project-btn">Coming Soon</button>
                   <!-- <button
                     class="btn btn-color-2 project-btn"
                     onclick="location.href='https://github.com/'"
@@ -391,7 +391,7 @@
             <div class="container">
               <div class="front" style="background-image: url(./assets/project-2.png)">
                 <div class="inner">
-                  <p style="color: beige;">Social Media App</p>
+                  <p style="color: white;">Social Media App</p>
                   <span>Project 2</span>
                 </div>
               </div>
@@ -404,7 +404,7 @@
                     entertainment in India and is home to the Bombay Stock
                     Exchange.
                   </p> -->
-                  <button class="btn btn-color-2 project-btn">Coming Soon</button>
+                  <button class="myBtn btn btn-color-2 project-btn">Coming Soon</button>
                   <!-- <button
                     class="btn btn-color-2 project-btn"
                     onclick="location.href='https://github.com/'"
