added dynamic experience field

--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>Fresher<br />MERN Stack Development</p>
+              <p><span id="myExperience" style="font-size: smaller; font-weight: 500;">6-Months</span>
+                <br />
+                MERN Stack Development
+              </p>
             </div>
             <div class="details-container">
               <img
