--- a/index.html
+++ b/index.html
@@ -278,86 +278,6 @@
     <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
-      <!-- <div class="experience-details-container">
-        <div class="about-containers">
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assets/project-1.png"
-                alt="Project 1"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">
-              Real Time Video Chat App
-            </h2>
-            <div class="btn-container">
-              <button class="btn btn-color-2 project-btn">Coming Soon</button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
-            </div>
-          </div>
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assets/project-2.png"
-                alt="Project 2"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">Social Media App</h2>
-            <div class="btn-container">
-              <button class="btn btn-color-2 project-btn">Coming Soon</button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
-            </div>
-          </div>
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assets/project-3.svg"
-                alt="Project 3"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
-            </div>
-          </div>
-        </div>
-      </div> -->
       <div class="wrapper">
         <div class="cols">
           <div class="col" ontouchstart="this.classList.toggle('hover');">
@@ -436,7 +356,10 @@
     </section>
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
-      <h1 class="title">Contact Me</h1>
+      <h1 class="title">
+        Contact Me
+      </h1>
+      <!-- <div class="contCaption">_ For Collaboration and Freelancing</div> -->
       <!-- <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
@@ -798,6 +721,9 @@
       
     </div>
     </section>
+    <div class="contCapPar">
+      <div class="contCaption"><b>Contact Me :</b> For Collaboration and Freelancing</div>
+    </div>
     <footer>
       <!-- <nav>
         <div class="nav-links-container">
