--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           </div>
           <div class="text-container">
             <p style="text-align: center">
-              As a <b>MERN</b> Full Stack Developer, I specialize in crafting
+              As a Full Stack Developer, I specialize in crafting
               seamless web experiences that blend functionality with aesthetics.
               With proficiency in MongoDB, Express.js, React, and Node.js, I
               excel in designing robust solutions tailored to clients' needs.
@@ -293,14 +293,15 @@
                   class="inner"
                 >
                   <!-- <p>London is the capital city of the United Kingdom. It is the U.K.'s largest metropolis and its economic, transportation, and cultural centre.</p> -->
-                  <button class="myBtn btn btn-color-2 project-btn">Coming Soon</button>
-                  <!-- <button
+                  <!-- <button class="myBtn btn btn-color-2 project-btn">Coming Soon</button> -->
+                  <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://github.com/'"
+                    target="_blank"
+                    onclick="location.href='https://github.com/faisaleric5530/Video_Calling_App'"
                   >
                     Github
                   </button>
-                  <button
+                  <!-- <button
                     class="btn btn-color-2 project-btn"
                     onclick="location.href='https://github.com/'"
                   >
