added new resume

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
           <button
             class="myBtn btn btn-color-2"
             target="_blank"
-            onclick="window.open('./assets/faisalDevResume.pdf')"
+            onclick="window.open('./assets/faisalDevResume1.pdf')"
           >
-            Download CV
+            View CV
           </button>
           <button
             class="myBtn btn btn-color-2"
