changes in names done

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>Faisal Dev Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="./pCards.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
@@ -57,7 +57,7 @@
             target="_blank"
             onclick="window.open('./assets/faisalDevResume1.pdf')"
           >
-            View CV
+            View Resume
           </button>
           <button
             class="myBtn btn btn-color-2"
